--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  body {
+    @apply text-primary-black font-poppins;
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@layer components {
+  .mask-image {
+    mask-image: url(/featured-mask-mobile.svg);
+    mask-size: contain;
+
+    @media (min-width: 1024px) {
+      mask-image: url(/featured-mask-desktop.svg);
+      mask-size: 100% 400px;
+    }
+  }
 }
